2008-01-10: Jason Long <jlong@messiah.edu>
 * Makefile.PL: bump version

 -- VERSION 0.30 --

2007-12-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (is_subdomain): do case-insensitive
   comparison
 * t/corpus/good_dk_7.txt: tests DK signature with domain names that
   differ only in case
 * t/corpus/good_rfc4871_4.txt: tests DKIM signature with i= and d=
   contain domain names differing in case
 * t/corpus/badkey_12.txt: tests public key where i=JLong, g=jl*ng

2007-12-07: Jason Long <jlong@messiah.edu>
 * t/verifier.t: three new DK tests
 * t/corpus/good_dk_6.txt: tests DK signature without h= tag
 * t/corpus/bad_dk_2.txt: tests DK signature w/o h= tag, Sender has
   been added
 * t/corpus/dk_multiple_1.txt: tests two DK signatures (with different
   domains) in a single message... both should pass
 * Makefile.PL: version bump

2007-12-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm,
   lib/Mail/DKIM/Canonicalization/DkCommon.pm:
   domainkeys: determine identity from algorithm object.  Currently the
   DomainKeys identity is determined by the Verifier.  It is
   theoretically possible for two different DomainKeys signatures on
   the same message to have different identities.  (This happens when
   one DomainKey signature includes a Sender header, and the other one
   does not.) This patch moves the determination of identity to the
   algorithm object.

2007-12-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, lib/Mail/DKIM/Common.pm: initialize
   signatures early.  This patch makes Mail::DKIM::Verifier initialize
   and check the signature object as soon as it is parsed, and
   subsequent headers are fed into the algorithm as they are read,
   instead of waiting for the end of header.
 * lib/Mail/DKIM/Verifier.pm: fix DK identity.  The previous patch broke
   identity-checking for DomainKeys signatures.  This patch moves some