@@ -4,7 +4,7 @@ See the ChangeLog file for the details.
 Version 0.31 - not yet released
 
  since 0.30:
-
+  * some error detail messages were changed (see ChangeLog, 2008-01-10 entry)
 
 
 Version 0.30 - released 2008-01-10
